fix alignment of components
Force the PokemonCardScroller (instead of PokemonCard) to have the most margin to the sides as it can have.

Issue: #39

--- a/src/styles/PokemonCard.css
+++ b/src/styles/PokemonCard.css
@@ -1,6 +1,4 @@
 #PokemonCardContainer {
-    margin-right: auto;
-    margin-left: auto;
     height: 50vh;
     aspect-ratio: 5/3;
     color: #213547;
